--- a/book-store/app/views/delivery.scala.html
+++ b/book-store/app/views/delivery.scala.html
@@ -29,11 +29,8 @@
             function initMap() {
                 var image = {
                     url: '@routes.Assets.versioned("images/drone_blue_64_64.png")',
-                    // This marker is 20 pixels wide by 32 pixels high.
                     size: new google.maps.Size(64, 64),
-                    // The origin for this image is (0, 0).
                     origin: new google.maps.Point(0, 0),
-                    // The anchor for this image is the center of the image.
                     anchor: new google.maps.Point(32, 32)
                 };
 
@@ -52,6 +49,15 @@
                     "</div>"
                 });
 
+                var infowindowDestination = new google.maps.InfoWindow({
+                    content: "<div>" +
+                    "<ul>" +
+                    "<li>@order.getAddress.name</li>" +
+                    "<li>@order.getAddress.street</li>" +
+                    "<li>@order.getAddress.city</li>" +
+                    "</ul>" +
+                    "</div>"
+                });
                 var map = new google.maps.Map(document.getElementById("map"), mapOptions);
 
                 marker = new google.maps.Marker({
@@ -59,16 +65,24 @@
                     map: map
                 });
 
+                destinationMarker = new google.maps.Marker({
+                    position: {lat: @order.getCoordinates.lat, lng: @order.getCoordinates.lng},
+                    map: map
+                });
+
                 marker.addListener('click', function() {
                     infowindow.open(map, marker);
                 });
+
+                destinationMarker.addListener('click', function() {
+                    infowindowDestination.open(map, destinationMarker);
+                });
             }
 
-
-            var source = new EventSource("http://@request().remoteAddress():8070/droneStream?lat=@order.getCoordinates.lat&long=@order.getCoordinates.lon");
+            var source = new EventSource("http://@request().host().takeWhile(_ != ':'):8070/droneStream?lat=@order.getCoordinates.lat&lng=@order.getCoordinates.lng");
             source.onmessage = function (event) {
+                console.log(event.data)
                 var coords = JSON.parse(event.data);
-                console.log(coords.lat)
                 marker.setPosition({lat: coords.lat, lng: coords.lng});
             };
 
